src/objects/Property_Owner_Requests__c.object
<CustomObject>
    <description>Stores requests made by the Property Owner including Initiate Sale of My Home.</description>
    <fields>
        <fullName>Real_Estate_Agent_Email__c</fullName>
        <label>Real Estate Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Agent_License_Number__c</fullName>
        <label>Real Estate Agent License Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Agent_Name__c</fullName>
        <label>Real Estate Agent Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Agent_Phone__c</fullName>
        <label>Real Estate Agent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Company_Name__c</fullName>
        <label>Real Estate Company Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Property Owner Requests</relationshipLabel>
        <relationshipName>Property_Owner_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Property Owner Requests</label>
    <nameField>
        <displayFormat>REQ-{00000000}</displayFormat>
        <label>Property Owner Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Owner Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>